--- a/scrabble/example.css
+++ b/scrabble/example.css
@@ -2,10 +2,24 @@
 	padding: 20px;
 }
 
-.scrabble-impl .word {
+.word {
 	font-size: 20px;
 }
 
-.scrabble-impl .guess {
+.guess {
 	width: 300px;
+}
+
+.check {
+	width: 20px;
+	height:20px;
+	padding-left: 5px;
+	display:none;
+}
+
+.x {
+	width: 20px;
+	height:20px;
+	padding-left: 5px;
+	display:none;
 }
