--- a/scrabble/example.css
+++ b/scrabble/example.css
@@ -1,5 +1,14 @@
+body {
+	background-color: #B0C4DE;
+}
+
 .scrabble-impl {
-	padding: 20px;
+	text-align: center;
+}
+
+h1 {
+	text-align: center;
+	color: red;
 }
 
 .word {
